# completely

./: .gitignore  FIM_FORMAT.md  README.md  fim_visualizer.py  main.py  monitor_inference.py  pyproject.toml  shell.nix  test_fim.py  train_mamba_overnight.py
data/pipelineV2/: data_stream.py  diff.py  edittypes.md
data/pipelineV2/tests/: test_diff.py
tests/: README.md
tests/baseline/: baseline_tests.py
tests/baseline/categories/classes/: classes1.py  classes2.py  classes3.py  classes4.py  classes5.py  classes6.py
tests/baseline/categories/sql/: sql3.py
tests/baseline/files/: sql1.py  sql2.py  sql4.py
tests/diffing/: data_analysis.py  difftest.py  train_mamba_overnight.py
tests/model_engines/: __init__.py  openrouter.py
tests/qlora370m/: benchmark_server.py  data_analysis.py  monitor_inference.py  screen_off.py  train_mamba_370m_qlora.py
tests/realworld/: edittypes.md  monitor_inference.py  serve_fim.py
tests/realworld/completely/: CHANGELOG.md  package-lock.json  package.json
vscode_extension/: Makefile  README.md
vscode_extension/src/: extension.ts
